--- a/BTCWatcher.app/Contents/Info.plist
+++ b/BTCWatcher.app/Contents/Info.plist
@@ -2,23 +2,19 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>CFBundleExecutable</key>
-    <string>BTCWatcher</string>
-    <key>CFBundleIconFile</key>
-    <string>AppIcon</string>
     <key>CFBundleIdentifier</key>
-    <string>com.example.BTCWatcher</string>
+    <string>com.example.BTCMenuBar</string>
     <key>CFBundleName</key>
-    <string>BTC Watcher</string>
+    <string>BTCMenuBar</string>
     <key>CFBundlePackageType</key>
     <string>APPL</string>
     <key>CFBundleShortVersionString</key>
     <string>1.0</string>
+    <key>CFBundleVersion</key>
+    <string>1</string>
     <key>LSMinimumSystemVersion</key>
     <string>13.0</string>
     <key>LSUIElement</key>
-    <true/>
-    <key>NSHighResolutionCapable</key>
     <true/>
 </dict>
 </plist>
