--- a/BTCWatcher.app/Contents/Info.plist
+++ b/BTCWatcher.app/Contents/Info.plist
@@ -2,14 +2,20 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>CFBundleExecutable</key>
+    <string>BTCWatcher</string>
     <key>CFBundleIdentifier</key>
-    <string>com.example.BTCMenuBar</string>
+    <string>com.chenwuai.btcwatcher</string>
     <key>CFBundleName</key>
-    <string>BTCMenuBar</string>
+    <string>BTCWatcher</string>
+    <key>CFBundleDisplayName</key>
+    <string>BTCWatcher</string>
+    <key>CFBundleIconFile</key>
+    <string>AppIcon</string>
     <key>CFBundlePackageType</key>
     <string>APPL</string>
     <key>CFBundleShortVersionString</key>
-    <string>1.0</string>
+    <string>1.0.0</string>
     <key>CFBundleVersion</key>
     <string>1</string>
     <key>LSMinimumSystemVersion</key>
